syntax = "proto3";

package transaction;

// transaction - 232 + len(data) bytes
message Transaction {
    // bytes20(Address) - address deal with this tx
    bytes to = 1;
    // length <= 128
    string nonce = 2;
    uint64 quota = 3;
    uint64 valid_until_block = 4;
    bytes data = 5;
    // bytes32(uint256)
    bytes value = 6;
    // bytes32(uint256)
    bytes chain_id = 7;
}

// user use this structure
message UnverifiedTransaction {
    Transaction transaction = 1;
    // sign hash of Transaction
    bytes signature = 2;
}

// transaction in chain
message SignedTransaction {
    UnverifiedTransaction untx = 1;
    // bytes32(H256) - UnverifiedTransaction hash
    bytes hash = 2;
    // public key of signature
    bytes sender = 3;
}
